--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Calculator</title>
     <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5788103117455434"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
